# valkey-embedded

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: ci.yml  release.yml
docs/audit/: 2026-06-10-oss-readiness-audit.md
examples/: 01_basic.py  02_persistence.py  03_shared_and_isolated.py  04_patching.py  05_serverconfig.py  06_replication.py  07_debug_info.py  08_durable_connect.py  09_server_api.py  README.md
src/valkey_embedded/: __init__.py  __main__.py  _dummy.c  client.py  configuration.py  debug.py  patch.py  pytest_plugin.py  server.py
tests/: conftest.py  test_build_valkey.py  test_cli.py  test_client.py  test_configuration.py  test_connect.py  test_debug.py  test_examples.py  test_lifecycle.py  test_metadata.py  test_negative.py  test_packaging.py  test_patch.py  test_pytest_plugin.py  test_registry.py  test_resources.py  test_server.py  test_serverconfig.py  test_slave.py  test_socket_fallback.py
tools/: build_valkey.py
